Adding build magic for Java 9 - build works, but not tests