@@ -59,14 +59,18 @@ subprojects {
     apply plugin: 'jacoco'
     apply plugin: 'signing'
 
+    sourceCompatibility = 1.9
+    targetCompatibility = 1.9
+
     checkstyle {
         configFile = new File(rootDir, "infra/codehealth/checkstyle.xml")
-        toolVersion = "7.1.1"
+        toolVersion = "8.8"
         ignoreFailures = false
     }
 
-    sourceCompatibility = 1.9
-    targetCompatibility = 1.9
+    tasks.withType(Checkstyle) {
+        exclude '**/module-info.java'
+    }
 
     jacoco {
         reportsDir = file("build/coverage/jacoco.exec")
@@ -77,8 +81,9 @@ subprojects {
     }
 
     dependencies {
-        compile 'ch.qos.logback:logback-classic:1.2.3'
-        compile 'org.slf4j:jcl-over-slf4j:1.7.25'
+        compile "org.slf4j:slf4j-api:$slf4jVersion"
+        compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+        testCompile "org.slf4j:slf4j-simple:$slf4jVersion"
         testCompile "junit:junit:$junitVersion"
         testCompile 'org.hamcrest:hamcrest-all:1.3'
         testCompile "org.mockito:mockito-core:$mockitoVersion"
@@ -181,6 +186,51 @@ subprojects {
                         }
                     }
                 }
+            }
+        }
+    }
+
+    afterEvaluate {
+        compileJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        compileTestJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'junit',
+                        '--add-reads', "$moduleName=junit",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        test {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                jvmArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'ALL-MODULE-PATH',
+                        '--add-reads', "$moduleName=junit",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        javadoc {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.addStringOption('-module-path', classpath.asPath)
             }
         }
     }
